--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!--Nav-->
         <nav class="navbar navbar-expand lg main-navbar bg-color main-navbar-color" id="main-navbar">
             <div class="container">
-                <a href="#" class="navbar-brand">Mama Justice Restaurant</a>
+                <a href="#" class="navbar-brand">Naija Kitchen</a>
                 <div class="order-lg-last btn-group">
                     <i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i>
                 </div>
@@ -86,11 +86,115 @@
       <section id="hero">
         <div class="hero-container">
             <div class="hero-logo">
-                <h1 class="font-weight-bold">Mama Justice Restuarant</h1>
+                <h1 class="font-weight-bold">Naija kitchen</h1>
             </div>
             <h2 class="font-weight-bold">Healthy Food, Healthy Life</h2>
             <div class="actions">
                 <a href="#" class="btn-get-started bg-warning">Order Now</a>
+            </div>
+        </div>
+      </section>
+    <!---Hero section-->
+    <!---Categories-->
+      <section id="category" class="category" pt-4>
+        <div class="container">
+            <div class="section-title">
+                <h2 class="text-center font-weight-bold">Categories</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatem excepturi asperiores eos! Minus ad quia optio consequatur, quibusdam aliquam!</p>
+            </div>
+            <div class="row">
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-img " >
+                            <img src="images/nigerian-food.jpg"alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="#">Rice</a>
+                            </h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus consequatur tempora tempore iure quod fuga dolores hic quae neque quidem!
+
+                            </p>
+                            <div class="read-more">
+                                <a href="#">
+                                    <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                                    Read More
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!---->
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/swallow.jpg"  alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="#">Swallow & Soup</a>
+                            </h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus consequatur tempora tempore iure quod fuga dolores hic quae neque quidem!
+
+                            </p>
+                            <div class="read-more">
+                                <a href="#">
+                                    <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                                    Read More
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!---->
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/small chops.jpeg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="#">Appetizers</a>
+                            </h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus consequatur tempora tempore iure quod fuga dolores hic quae neque quidem!
+
+                            </p>
+                            <div class="read-more">
+                                <a href="#">
+                                    <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                                    Read More
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!---->
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/dessert2.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="#">Dessert</a>
+                            </h5>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus consequatur tempora tempore iure quod fuga dolores hic quae neque quidem!
+
+                            </p>
+                            <div class="read-more">
+                                <a href="#">
+                                    <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                                    Read More
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!---->
             </div>
         </div>
       </section>
@@ -102,15 +206,7 @@
 
 
 
-
-
-
-
-
-
-
-
-      <!---Hero section-->
+    <!---End of categories-->
 
 
 
