--- a/index.html
+++ b/index.html
@@ -198,15 +198,255 @@
             </div>
         </div>
       </section>
+<!---End of categories-->
+<!--product section-->
+<section class="product-section bg-img py-3">
+    <div class="container">
+        <div class="row justify-content-center pb-5">
+            <div class="col-md-7 heading-section-section text-center">
+                <h2 class="font-weight-bold text-color glow">
+                    Menu
+                </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/Pounded\ yam\ and\ egusi\ soup.png);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
+                    </div>
+                    <div class="text text-center">
+                        <span class="day">Deal of the day</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/nigerian-food.jpg);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
+                    </div>
+                    <div class="text text-center">
+                        <span class="week">Deal of the week</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/Jollof-rice.jpg);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/dessert.png);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/dessert.png);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/dessert.png);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/dessert.png);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/dessert2.jpg);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
 
-    <!---End of categories-->
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <h2 class="text-white">Specification</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <a href="#" class="btn btn-prod d-block">
+                    View all products
+                    <i class="fa fa-mouse-pointer" aria-hidden="true"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<!---End of product section-->
+
 
 
 
