--- a/index.html
+++ b/index.html
@@ -213,17 +213,17 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/Pounded\ yam\ and\ egusi\ soup.png);">
+                    style="background-image: url(images/fried\ rice.png);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                <i class="fa fa-shopping-cart" ></i>
                             </a>
                             <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-heart" aria-hidden="true"></i>
+                                <i class="fa fa-heart" ></i>
                             </a>
                             <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                <i class="fa fa-eye" ></i>
                             </a>
                         </p>
                     </div>
@@ -241,7 +241,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/nigerian-food.jpg);">
+                    style="background-image: url(images/spaghetti.png);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
@@ -269,7 +269,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/Jollof-rice.jpg);">
+                    style="background-image: url(images/Nigerian-stewed-beans-1.jpg);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
