added chef section and subscribe section

--- a/index.html
+++ b/index.html
@@ -446,7 +446,154 @@
     </div>
 </section>
 <!---End of product section-->
+<!--Team section-->
+<section class="chef my-5" id="chef">
+    <div class="container">
+        <h2 class="text-center">
+            Meet Our Chef
+        </h2>
+        <div class="row">
+            <div co-sm-3 col-xs-6>
+                <div class="card card-block">
+                    <a href="#">
+                        <img src="images/chef2.png" class="chef-img" alt="chef">
+                        <div class="card-title-wrap">
+                            <span class="card-title">
+                                John Doe
+                            </span>
+                            <span class="card-text">Senior Chef</span>
+                        </div>
+                        <div class="chef-over">
+                            <h4 class="hidden-md-down">
+                                Connect With Me
+                            </h4>
+                            <nav class="social-nav">
+                                <a href="#">
+                                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                </a>
+                            </nav>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, repellendus.</p>
 
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!---->
+            <div co-sm-3 col-xs-6>
+                <div class="card card-block">
+                    <a href="#">
+                        <img src="images/chef2.png" class="chef-img" alt="chef">
+                        <div class="card-title-wrap">
+                            <span class="card-title">
+                                Milee
+                            </span>
+                            <span class="card-text">Senior Chef</span>
+                        </div>
+                        <div class="chef-over">
+                            <h4 class="hidden-md-down">
+                                Connect With Me
+                            </h4>
+                            <nav class="social-nav">
+                                <a href="#">
+                                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                </a>
+                            </nav>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, repellendus.</p>
+
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!---->
+            <div co-sm-3 col-xs-6>
+                <div class="card card-block">
+                    <a href="#">
+                        <img src="images/chef2.png" class="chef-img" alt="chef">
+                        <div class="card-title-wrap">
+                            <span class="card-title">
+                                Milee
+                            </span>
+                            <span class="card-text">Senior Chef</span>
+                        </div>
+                        <div class="chef-over">
+                            <h4 class="hidden-md-down">
+                                Connect With Me
+                            </h4>
+                            <nav class="social-nav">
+                                <a href="#">
+                                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                </a>
+                            </nav>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, repellendus.</p>
+
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!---->
+        
+        </div>
+    </div>
+</section>
+<!--Team section end-->
+
+<!--Filler section-->
+<section id="subscribe" class="py-5">
+    <div class="container">
+        <div class="row align-items-center my-5">
+            <div class="col-sm-10 mx-auto-text-center mb-5">
+                <h4 class="display-3 mb-5 text-uppercase text-white text-center">
+                    Subscribe for More Offers
+                </h4>
+                <form class="form-inline d-flex justify-content-center">
+                    <input type="text" class="form-control w-35" placeholder="Email">
+                    <button class="btn form-btn m-1">Subscribe</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--Filler section -->
 
 
 
