Added blog section

--- a/index.html
+++ b/index.html
@@ -571,29 +571,124 @@
         </div>
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!--Filler section -->
+
+<!--Blog section -->
+<section class="blog-section">
+    <div class="container">
+        <div class="row justify-content-center mb-5">
+            <div class="col-md-7 blog-heading text-center">
+                <h2>Recent Blog</h2>
+            </div>
+        </div>
+        <div class="row d-flex">
+            <div class="col-lg-6 d-flex align-items-stretch">
+                <div class="blog-start d-flex">
+                    <a href="#" class="block-20 img" style="background-image: url('images/fried\ rice.png');">
+                    </a>
+                    <div class="text p-4 bg-light">
+                        <div class="des">
+                            <p><i class="fa fa-calendar" aria-hidden="true"></i>
+                            24 July 2022</p>
+                        </div>
+                        <h3 class="heading mb-3">
+                            <a href="#">
+                                Lorem Ipsum
+                            </a>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid velit nobis adipisci corrupti saepe cum, ut repellendus iusto ad illo, impedit temporibus sit vel laudantium itaque aut? Voluptatum, eaque non!</p>
+                        <a href="#" class="btn-custom">Continue
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-lg-6 d-flex align-items-stretch">
+                <div class="blog-start d-flex">
+                    <a href="#" class="block-20 img" style="background-image: url('images/swallow.jpg');">
+                    </a>
+                    <div class="text p-4 bg-light">
+                        <div class="des">
+                            <p><i class="fa fa-calendar" aria-hidden="true"></i>
+                            24 July 2022</p>
+                        </div>
+                        <h3 class="heading mb-3">
+                            <a href="#">
+                                Lorem Ipsum
+                            </a>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid velit nobis adipisci corrupti saepe cum, ut repellendus iusto ad illo, impedit temporibus sit vel laudantium itaque aut? Voluptatum, eaque non!</p>
+                        <a href="#" class="btn-custom">Continue
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-lg-6 d-flex align-items-stretch">
+                <div class="blog-start d-flex">
+                    <a href="#" class="block-20 img" style="background-image: url('images/Pounded\ yam\ and\ egusi\ soup.png');">
+                    </a>
+                    <div class="text p-4 bg-light">
+                        <div class="des">
+                            <p><i class="fa fa-calendar" aria-hidden="true"></i>
+                            24 July 2022</p>
+                        </div>
+                        <h3 class="heading mb-3">
+                            <a href="#">
+                                Lorem Ipsum
+                            </a>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid velit nobis adipisci corrupti saepe cum, ut repellendus iusto ad illo, impedit temporibus sit vel laudantium itaque aut? Voluptatum, eaque non!</p>
+                        <a href="#" class="btn-custom">Continue
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-lg-6 d-flex align-items-stretch">
+                <div class="blog-start d-flex">
+                    <a href="#" class="block-20 img" style="background-image: url('images/Nigerian-stewed-beans-1.jpg');">
+                    </a>
+                    <div class="text p-4 bg-light">
+                        <div class="des">
+                            <p><i class="fa fa-calendar" aria-hidden="true"></i>
+                            24 July 2022</p>
+                        </div>
+                        <h3 class="heading mb-3">
+                            <a href="#">
+                                Lorem Ipsum
+                            </a>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid velit nobis adipisci corrupti saepe cum, ut repellendus iusto ad illo, impedit temporibus sit vel laudantium itaque aut? Voluptatum, eaque non!</p>
+                        <a href="#" class="btn-custom">Continue
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!---->
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--Blog section -->
 
 
 
