Added booking section

--- a/index.html
+++ b/index.html
@@ -674,21 +674,106 @@
     </div>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!--Blog section -->
+<!--Form section -->
+<section class="book-section img"
+style="background-image: url(images/restaurant2.jpg);">
+<div class="container">
+    <div class="row d-flex">
+        <div class="col-md-7 make-reservation p-4 px-md-5 pb-md-5">
+            <div class="heading-section mb-5 text-center">
+                <h2 class="mb-4">Make A Reservation</h2>
+            </div>
+            <form>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="">Name</label>
+                            <input type="text" class="form-control" placeholder="Your Name">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="">Email</label>
+                            <input type="text" class="form-control" placeholder="Your Email">
+                        </div>
+                    </div>
+                    <!---->
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="">Phone</label>
+                            <input type="text" class="form-control" placeholder="Phone">
+                        </div>
+                    </div>
+                    <!---->
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="">Date</label>
+                            <input type="text" class="form-control" placeholder="Date"
+                            id="book-date">
+                        </div>
+                    </div>
+                    <!---->
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="">Time</label>
+                            <input type="text" class="form-control" id="book-time" placeholder="Time">
+                        </div>
+                    </div>
+                    <!---->
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="">Person</label>
+                            <div class="select-wrap one-third">
+                                <div class="icon">
+                                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                                </div>
+                                <select name="" id="" class="form-control">
+                                    <option value="">Person</option>
+                                    <option value="">1</option>
+                                    <option value="">2</option>
+                                    <option value="">3</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 mt-3">
+                        <div class="form-group text-center">
+                            <input type="submt" value="Make a Reservation" 
+                            class="btn btn-book py-3 px-5">
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--End of Form section -->
 
 
 
