--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <h2 class="font-weight-bold">Healthy Food, Healthy Life</h2>
             <div class="actions">
-                <a href="#" class="btn-get-started bg-warning">Order Now</a>
+                <a href="order.html" class="btn-get-started bg-warning">Order Now</a>
             </div>
         </div>
       </section>
