--- a/order.html
+++ b/order.html
@@ -122,8 +122,8 @@
             <!---->
             <div class="col-md-3 d-flex">
                 <div class="product glow">
-                    <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/spaghetti.png);">
+                    <div class="img d-flex align-items-center justify-content-center "
+                    style="background-image: url(images/Jollof\ rice\(categories\).jpg); ">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
@@ -141,7 +141,7 @@
                     </div>
                     <div class="text text-center">
                         <span class="week">Deal of the week</span>
-                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <span class="category font-weight-bold">Jollof Rice</span>
                         <h2 class="text-white">Specification</h2>
                         <span class="price">$30.00</span>
                     </div>
@@ -151,7 +151,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/Nigerian-stewed-beans-1.jpg);">
+                    style="background-image: url(images/white-rice.jpg);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
