added image to rice category

--- a/order.html
+++ b/order.html
@@ -151,7 +151,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/white-rice.jpg);">
+                    style="background-image: url(images/Whiterice\ and\ stew.png);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
@@ -169,7 +169,7 @@
                     </div>
                     <div class="text text-center">
                         <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">Lorem Ipsum</span>
+                        <span class="category font-weight-bold">White Rice and Stew</span>
                         <h2 class="text-white">Specification</h2>
                         <span class="price">$30.00</span>
                     </div>
