added product to rice category

--- a/order.html
+++ b/order.html
@@ -114,7 +114,7 @@
                     <div class="text text-center">
                         <span class="day">Deal of the day</span>
                         <span class="category font-weight-bold">Fried Rice</span>
-                        <h2 class="text-white">Specification</h2>
+                        <h2 class="text-white">And Chicken or Turkey</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                     <div class="text text-center">
                         <span class="week">Deal of the week</span>
                         <span class="category font-weight-bold">Jollof Rice</span>
-                        <h2 class="text-white">Specification</h2>
+                        <h2 class="text-white">With Chicken and salad</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                     <div class="text text-center">
                         <span class="out">Out of Kitchen</span>
                         <span class="category font-weight-bold">White Rice and Stew</span>
-                        <h2 class="text-white">Specification</h2>
+                        <h2 class="text-white">With assorted Beaf</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/dessert.png);">
+                    style="background-image: url(images/Ofada_rice_with_fried_plantain_and_beaf.jpg);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
@@ -197,8 +197,8 @@
                     </div>
                     <div class="text text-center">
                         <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">Lorem Ipsum</span>
-                        <h2 class="text-white">Specification</h2>
+                        <span class="category font-weight-bold">Ofada Rice</span>
+                        <h2 class="text-white">With Fried Plantain and Beaf</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
