--- a/Categories.html
+++ b/Categories.html
@@ -170,6 +170,141 @@
                     <div class="text text-center">
                         <span class="out">Out of Kitchen</span>
                         <span class="category font-weight-bold">White Rice and Stew</span>
+                        <h2 class="text-white">With assorted Beef</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/Ofada_rice_with_fried_plantain_and_beaf.jpg);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
+
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">Ofada Rice</span>
+                        <h2 class="text-white">With Fried Plantain and Beef</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <a href="#" class="btn btn-prod d-block">
+                    View all products
+                    <i class="fa fa-mouse-pointer" aria-hidden="true"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<!---End of product section-->
+      <!--product section-->
+<section class="product-section bg-img py-3">
+    <div class="container">
+        <div class="row justify-content-center pb-5">
+            <div class="col-md-7 heading-section-section text-center">
+                <h2 class="font-weight-bold text-color glow">
+                    Swallow
+                </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/Pound\ yam\ and\ egusi.jpg);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" ></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" ></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" ></i>
+                            </a>
+                        </p>
+                    </div>
+
+                    </div>
+                    <div class="text text-center">
+                        <span class="day">Deal of the day</span>
+                        <span class="category font-weight-bold">Pound Yam</span>
+                        <h2 class="text-white">With assorted Beef</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center "
+                    style="background-image: url(images/Jollof\ rice\(categories\).jpg); ">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
+
+                    </div>
+                    <div class="text text-center">
+                        <span class="week">Deal of the week</span>
+                        <span class="category font-weight-bold">Jollof Rice</span>
+                        <h2 class="text-white">With Chicken and salad</h2>
+                        <span class="price">$30.00</span>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="col-md-3 d-flex">
+                <div class="product glow">
+                    <div class="img d-flex align-items-center justify-content-center"
+                    style="background-image: url(images/Whiterice\ and\ stew.png);">
+                    <div class="icons">
+                        <p class="icon-block d-flex">
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="d-flex align-items-center justify-content-center">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
+
+                    </div>
+                    <div class="text text-center">
+                        <span class="out">Out of Kitchen</span>
+                        <span class="category font-weight-bold">White Rice and Stew</span>
                         <h2 class="text-white">With assorted Beaf</h2>
                         <span class="price">$30.00</span>
                     </div>
@@ -199,118 +334,6 @@
                         <span class="out">Out of Kitchen</span>
                         <span class="category font-weight-bold">Ofada Rice</span>
                         <h2 class="text-white">With Fried Plantain and Beaf</h2>
-                        <span class="price">$30.00</span>
-                    </div>
-                </div>
-            </div>
-            <!---->
-            <div class="col-md-3 d-flex">
-                <div class="product glow">
-                    <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/dessert.png);">
-                    <div class="icons">
-                        <p class="icon-block d-flex">
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-heart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
-                            </a>
-                        </p>
-                    </div>
-
-                    </div>
-                    <div class="text text-center">
-                        <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">Lorem Ipsum</span>
-                        <h2 class="text-white">Specification</h2>
-                        <span class="price">$30.00</span>
-                    </div>
-                </div>
-            </div>
-            <!---->
-            <div class="col-md-3 d-flex">
-                <div class="product glow">
-                    <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/dessert.png);">
-                    <div class="icons">
-                        <p class="icon-block d-flex">
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-heart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
-                            </a>
-                        </p>
-                    </div>
-
-                    </div>
-                    <div class="text text-center">
-                        <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">Lorem Ipsum</span>
-                        <h2 class="text-white">Specification</h2>
-                        <span class="price">$30.00</span>
-                    </div>
-                </div>
-            </div>
-            <!---->
-            <div class="col-md-3 d-flex">
-                <div class="product glow">
-                    <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/dessert.png);">
-                    <div class="icons">
-                        <p class="icon-block d-flex">
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-heart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
-                            </a>
-                        </p>
-                    </div>
-
-                    </div>
-                    <div class="text text-center">
-                        <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">Lorem Ipsum</span>
-                        <h2 class="text-white">Specification</h2>
-                        <span class="price">$30.00</span>
-                    </div>
-                </div>
-            </div>
-            <!---->
-            <div class="col-md-3 d-flex">
-                <div class="product glow">
-                    <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/dessert2.jpg);">
-                    <div class="icons">
-                        <p class="icon-block d-flex">
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-heart" aria-hidden="true"></i>
-                            </a>
-                            <a href="#" class="d-flex align-items-center justify-content-center">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
-                            </a>
-                        </p>
-                    </div>
-
-                    </div>
-                    <div class="text text-center">
-                        <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">Lorem Ipsum</span>
-                        <h2 class="text-white">Specification</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
