--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <a href="#" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Categories</a>
+                            <a href="Categories.html" class="nav-link">Categories</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Menu</a>
