added product to swallow category

--- a/Categories.html
+++ b/Categories.html
@@ -258,7 +258,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center "
-                    style="background-image: url(images/Jollof\ rice\(categories\).jpg); ">
+                    style="background-image: url(images/eba..jpg) ">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
@@ -276,8 +276,8 @@
                     </div>
                     <div class="text text-center">
                         <span class="week">Deal of the week</span>
-                        <span class="category font-weight-bold">Jollof Rice</span>
-                        <h2 class="text-white">With Chicken and salad</h2>
+                        <span class="category font-weight-bold">Eba</span>
+                        <h2 class="text-white">With Okra Soup and Assorted Beef</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
