added product to swallow category

--- a/Categories.html
+++ b/Categories.html
@@ -286,7 +286,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/Whiterice\ and\ stew.png);">
+                    style="background-image: url(images/amala.jpg);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
@@ -304,8 +304,8 @@
                     </div>
                     <div class="text text-center">
                         <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">White Rice and Stew</span>
-                        <h2 class="text-white">With assorted Beaf</h2>
+                        <span class="category font-weight-bold">Amala</span>
+                        <h2 class="text-white">With Ewedu, Gbegiri and assorted Beaf</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
