added product to swallow category

--- a/Categories.html
+++ b/Categories.html
@@ -314,7 +314,7 @@
             <div class="col-md-3 d-flex">
                 <div class="product glow">
                     <div class="img d-flex align-items-center justify-content-center"
-                    style="background-image: url(images/Ofada_rice_with_fried_plantain_and_beaf.jpg);">
+                    style="background-image: url(images/Fufu.jpg);">
                     <div class="icons">
                         <p class="icon-block d-flex">
                             <a href="#" class="d-flex align-items-center justify-content-center">
@@ -332,8 +332,8 @@
                     </div>
                     <div class="text text-center">
                         <span class="out">Out of Kitchen</span>
-                        <span class="category font-weight-bold">Ofada Rice</span>
-                        <h2 class="text-white">With Fried Plantain and Beaf</h2>
+                        <span class="category font-weight-bold">Fufu</span>
+                        <h2 class="text-white">With Edikang Ikong Soup and Beef</h2>
                         <span class="price">$30.00</span>
                     </div>
                 </div>
